# OSCalculator

./: CMakeLists.txt  README.md
include/: httpclient.h  playerinfo.h  playerskill.h
src/: httpclient.cpp  main.cpp  playerinfo.cpp  playerskill.cpp
